{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 181,
  "lineage": "55036b52-37f3-2e27-12d2-48e7e04cbe87",
  "resources": [
    {
      "module": "module.tadas_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ee42ba0209b6d77",
            "arn": "arn:aws:ec2:eu-west-1:961514271558:instance/i-08c96a90a81e1c14a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08c96a90a81e1c14a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AWSQA",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0207743ba8eff2e15",
            "private_dns": "ip-192-168-1-206.eu-west-1.compute.internal",
            "private_ip": "192.168.1.206",
            "public_dns": "ec2-34-252-128-142.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.252.128.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e36091fbb83a12b8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0afd295aefde1d232",
            "tags": {
              "Name": "EC200820"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f8c477b9736fb428"
            ]
          },
          "dependencies": [
            "module.tadas_SG.aws_security_group.allow_tls",
            "module.tadas_vpc.aws_subnet.subnet_a",
            "module.tadas_vpc.aws_vpc.vpc",
            "module.tadas_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.tadas_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961514271558:internet-gateway/igw-0d5c22beb2077bdaf",
            "id": "igw-0d5c22beb2077bdaf",
            "owner_id": "961514271558",
            "vpc_id": "vpc-0fcf34a535fbf789e"
          },
          "dependencies": [
            "module.tadas_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tadas_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08db3b98825a0109b",
            "owner_id": "961514271558",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d5c22beb2077bdaf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0fcf34a535fbf789e"
          },
          "dependencies": [
            "module.tadas_vpc.aws_internet_gateway.gw",
            "module.tadas_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tadas_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08531cad3b9b65b5d",
            "route_table_id": "rtb-08db3b98825a0109b",
            "subnet_id": "subnet-0afd295aefde1d232"
          },
          "dependencies": [
            "module.tadas_vpc.aws_internet_gateway.gw",
            "module.tadas_vpc.aws_route_table.route",
            "module.tadas_vpc.aws_subnet.subnet_a",
            "module.tadas_vpc.aws_vpc.vpc",
            "module.tadas_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.tadas_SG",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961514271558:security-group/sg-0f8c477b9736fb428",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8c477b9736fb428",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "961514271558",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow SHH"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fcf34a535fbf789e"
          },
          "dependencies": [
            "module.tadas_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tadas_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961514271558:subnet/subnet-0afd295aefde1d232",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0afd295aefde1d232",
            "map_public_ip_on_launch": false,
            "owner_id": "961514271558",
            "vpc_id": "vpc-0fcf34a535fbf789e"
          },
          "dependencies": [
            "module.tadas_vpc.aws_vpc.vpc",
            "module.tadas_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.tadas_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961514271558:vpc/vpc-0fcf34a535fbf789e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0f6d382844bc63b69",
            "default_route_table_id": "rtb-052606a060a86a917",
            "default_security_group_id": "sg-0f5b28cad8b879d2d",
            "dhcp_options_id": "dopt-17ecd871",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fcf34a535fbf789e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-052606a060a86a917",
            "owner_id": "961514271558",
            "tags": {
              "Name": "VPC200820"
            }
          }
        }
      ]
    }
  ]
}